Fixed word-break in links.

--- a/sass/proposal_detail/_proposal-detail-base.scss
+++ b/sass/proposal_detail/_proposal-detail-base.scss
@@ -5,8 +5,8 @@
     font-weight: 300;
     .proposal-detail-base a {
       color: $color;
-      word-wrap: break-word;
-      word-break: break-all;
+      // word-wrap: break-word;
+      // word-break: break-all;
     }
     .bloco-destaque {
       background-color: $color;
